# TestProj

./: .cproject  .mxproject  .project  Lesson2.pptx  README.md  TestProj Debug.launch  TestProj.ioc
Client/: CMakeLists.txt
Client/src/: main.cpp
Core/Inc/: stm32f7xx_hal_conf.h  stm32f7xx_it.h  udp_handler.h
Core/Src/: main.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  udp_handler.c
Debug/: TestProj.elf  TestProj.list  TestProj.map  makefile  sources.mk
Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f7xx_hal_msp.cyclo  stm32f7xx_hal_msp.su  stm32f7xx_it.cyclo  stm32f7xx_it.su  subdir.mk  udp_handler.cyclo  udp_handler.d  udp_handler.su
Debug/Drivers/BSP/Components/lan8742/: subdir.mk
Debug/Drivers/STM32F7xx_HAL_Driver/Src/: subdir.mk
Debug/LWIP/App/: subdir.mk
LWIP/App/: lwip.c
Server/: CMakeLists.txt
Server/src/: main.cpp
